# pg_pwhash

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  meson.build  pg_pwhash--1.0.sql  pg_pwhash.c  pg_pwhash.control  pg_pwhash.h  pgxcrypto_argon2.c  pgxcrypto_argon2.h  pgxcrypto_poc--1.0.sql  pgxcrypto_poc.c  pgxcrypto_poc.control  pgxcrypto_poc.h  pgxcrypto_poc.md  pgxcrypto_pwhash.c  pgxcrypto_pwhash.control  pgxcrypto_pwhash.h  pgxcrypto_pwhash.md  pgxcrypto_scrypt.c  pgxcrypto_scrypt.h  pgxcrypto_yescrypt.c  pgxcrypto_yescrypt.h  pwhash_argon2.c  pwhash_argon2.h  pwhash_scrypt.c  pwhash_scrypt.h  pwhash_yescrypt.c  pwhash_yescrypt.h
.github/workflows/: tests.yml
benchmark/: bench-argon2.sql  bench-scrypt.sql  random_passwords.txt
expected/: argon2.out  argon2_openssl.out  argon2_openssl_1.out  pg_pwhash.out  pg_pwhash_1.out  pg_pwhash_2.out  pg_pwhash_3.out  pgxcrypto.out  pgxcrypto_1.out  pgxcrypto_2.out  scrypt.out  scrypt_1.out  scrypt_crypt.out  scrypt_crypt_1.out  scrypt_crypt_2.out  scrypt_libscrypt.out  scrypt_libscrypt_1.out  yescrypt.out  yescrypt_1.out
sql/: argon2.sql  argon2_openssl.sql  pg_pwhash.sql  pgxcrypto.sql  scrypt.sql  scrypt_crypt.sql  scrypt_libscrypt.sql  yescrypt.sql
test/: Makefile  crypt_gensalt_scrypt.c  crypt_gensalt_yescrypt.c
